Add navbar and clean up code

--- a/display-examples/flexbox-row.html
+++ b/display-examples/flexbox-row.html
@@ -15,13 +15,13 @@
         <li     class="navbar-menu"><a href="./flexbox-row.html">Flexbox (row)</a></li>
         </ul>
     </div>
-    <p><strong>text-align:</strong> center</p>
-    <div class="block-container">
-        <h2>BLOCK</h2> 
+    <p><strong>flex-direction:</strong> row (default)</p>
+    <p><strong>flex-wrap:</strong> wrap</p>
+    <div class="flex-container">
+        <h2>FLEX - ROW</h2> 
         <img class="responsive-img" src="https://placeimg.com/640/480/animals" alt="">
-        <img class="responsive-img" src="https://placeimg.com/640/480/forest" alt="">
-        <img class="responsive-img" src="https://placeimg.com/640/480/nature" alt="">
-        <p>Pictures are <strong>inline</strong> by default.</p>
+        <img class="responsive-img" src="https://placeimg.com/640/480/coffee" alt="">
+        <p>Pictures are Inline by default.</p>
         <div class="div-block"><p><strong>block</strong></p></div>
         <div class="div-block"><p><strong>block</strong></p></div>
         <div class="div-inline-block"><p><strong>inline-block</strong></p></div>
