Tuning header stylization

--- a/display-examples/index.html
+++ b/display-examples/index.html
@@ -17,12 +17,12 @@
             <li class="navbar-menu"><a href="./grid.html">Grid</a></li>
         </ul>
     </div>
-    <h2><mark class="mark-block">BLOCK</mark></h2>
+    <h2 class="header-block">BLOCK</h2>
     <hr> 
     <p class="definition">HTML elements are block or inline elements by default. Block elements put themselves on a new line. Text tags (h1, p, etc.) are block. Pictures and links are inline. The <mark class="mark-block">span</mark> tag is used with inline elements whilst the <mark class="mark-block">div</mark> tag is used with block-level content. For centering an element, <mark class="mark-code">margin: auto</mark> is always a good try.</p>
     <hr>
     <p><strong>text-align:</strong> center</p>
-    <div class="block-container">
+    <div class="container block-container">
         <img class="responsive-img" src="https://placeimg.com/640/480/animals" alt="">
         <img class="responsive-img" src="https://placeimg.com/640/480/forest" alt="">
         <img class="responsive-img" src="https://placeimg.com/640/480/nature" alt="">
