--- a/display-examples/flexbox-row.html
+++ b/display-examples/flexbox-row.html
@@ -17,13 +17,13 @@
             <li class="navbar-menu"><a href="./grid.html">Grid</a></li>
         </ul>
     </div>
-    <h2><mark class="mark-flex-row">FLEX-ROW</mark></h2>
+    <h2 class="header-flex-row">FLEX-ROW</h2>
     <hr> 
     <p class="definition">Setting a container is required when using flexbox. First, set its display to <mark class="mark-code">flex</mark>. The <mark class="mark-flex-row">flex-direction</mark> by default is row. The <mark class="mark-flex-row">span</mark> tag is used with inline elements whilst the <mark class="mark-flex-row">div</mark> tag is used with block-level content. When trying to center an element, <em>margin: auto</em> is always a good try.</p>
     <hr>
     <p><strong>flex-direction:</strong> row (default)</p>
     <p><strong>flex-wrap:</strong> wrap</p>
-    <div class="flex-container">
+    <div class="container flex-container">
         <img class="responsive-img" src="https://placeimg.com/640/480/animals" alt="">
         <img class="responsive-img" src="https://placeimg.com/640/480/coffee" alt="">
         <p>Pictures are Inline by default.</p>
