--- a/display-examples/index.html
+++ b/display-examples/index.html
@@ -12,8 +12,8 @@
     <div class="navbar-container">
         <ul>
             <li class="navbar-menu"><a href="./index.html">Block</a></li>
-            <li class="navbar-menu"><a href="./flexbox-row.html">Flexbox (row)</a></li>
-            <li class="navbar-menu"><a href="./flexbox-column.html">Flexbox (column)</a></li>
+            <li class="navbar-menu"><a href="./flexbox-row.html">Flex (row)</a></li>
+            <li class="navbar-menu"><a href="./flexbox-column.html">Flex (column)</a></li>
             <li class="navbar-menu"><a href="./grid.html">Grid</a></li>
         </ul>
     </div>
