--- a/flexbox.html
+++ b/flexbox.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Display Examples</title>
+    <title>Examples: Flexbox</title>
 </head>
 <body>
     <h1>Container and Layout Examples</h1>
     <div class="navbar-container">
         <ul>
             <li class="navbar-menu"><a href="./index.html">Block</a></li>
-            <li class="navbar-menu"><a href="./flexbox-row.html">Flex (row)</a></li>
-            <li class="navbar-menu"><a href="./flexbox-column.html">Flex (column)</a></li>
+            <li class="navbar-menu"><a href="./flexbox.html">Flexbox</a></li>
             <li class="navbar-menu"><a href="./grid.html">Grid</a></li>
+            <li class="navbar-menu"><a href="./about.html">About</a></li>
         </ul>
     </div>
-    <h2 class="header-flex-row">FLEX-ROW</h2>
+    <h2 class="header-flex-row">FLEXBOX</h2>
     <hr> 
     <p class="definition">Setting a container is required when using flexbox. First, set its display to <mark class="mark-code">flex</mark>. The <mark class="mark-flex-row">flex-direction</mark> by default is row. The <mark class="mark-flex-row">span</mark> tag is used with inline elements whilst the <mark class="mark-flex-row">div</mark> tag is used with block-level content. When trying to center an element, <em>margin: auto</em> is always a good try.</p>
     <hr>
