--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Display Examples</title>
+    <title>Examples: Block</title>
 </head>
 <body>
     <h1>Container and Layout Examples</h1>
     <div class="navbar-container">
         <ul>
             <li class="navbar-menu"><a href="./index.html">Block</a></li>
-            <li class="navbar-menu"><a href="./flexbox-row.html">Flex (row)</a></li>
-            <li class="navbar-menu"><a href="./flexbox-column.html">Flex (column)</a></li>
+            <li class="navbar-menu"><a href="./flexbox.html">Flexbox</a></li>
             <li class="navbar-menu"><a href="./grid.html">Grid</a></li>
+            <li class="navbar-menu"><a href="./about.html">About</a></li>
         </ul>
     </div>
     <h2 class="header-block">BLOCK</h2>
