--- a/grid/grid.html
+++ b/grid/grid.html
@@ -9,16 +9,32 @@
 </head>
 <body>
     <main>
-        <div class="box1">
+
+        <div class="box box1">
             <h1>Box 1</h1>
                 <p>Hello there!</p>
         </div>
-        <div class="box2">
+
+        <div class="box box2">
             <h1>Box 2</h1>
         </div>
-        <div class="box3">
+
+        <div class="box box3">
             <h1>Box 3</h1>
         </div>
+
+        <div class="box box4">
+            <h1>Box 4</h1>
+        </div>
+
+        <div class="box">
+            <h1>Box 5</h1>
+        </div>
+
+        <div class="box">
+            <h1>Box 6</h1>
+        </div>
+
     </main>
 </body>
 </html>
