Test for link to home page

--- a/container-layout/grid.html
+++ b/container-layout/grid.html
@@ -14,7 +14,7 @@
             <li class="navbar-menu"><a href="./block.html">Block</a></li>
             <li class="navbar-menu"><a href="./flexbox.html">Flexbox</a></li>
             <li class="navbar-menu"><a href="./grid.html">Grid</a></li>
-            <li class="navbar-menu"><a href="../webdev-pratice/index.html">Home</a></li>
+            <li class="navbar-menu"><a href="../index.html">Home</a></li>
         </ul>
     </div>
     <h2 class="header-grid">GRID</h2>
