--- a/grid/grid.html
+++ b/grid/grid.html
@@ -8,33 +8,42 @@
     <title>Grid</title>
 </head>
 <body>
+    <header>
+        <div id="site-title">
+        <h1>Grid System</h1>
+        <p class="site-title__p"><em>The place to experiment with grid layout!</em></p>
+        </div>
+
+        <div id="navbar-container">
+           <a href="#">Home</a>
+           <a href="#">Layout Tricks</a>
+           <a href="#">Contact</a>
+        </div>
+    </header>
+
+
     <main>
 
-        <div class="box box1">
-            <h1>Box 1</h1>
-                <p>Hello there!</p>
+        <div class="box header">
+            <h2>Header</h2>
+                <p>Some article about loving to code.</p>
         </div>
 
-        <div class="box box2">
-            <h1>Box 2</h1>
+        <div class="box advert">
+            <h3>Advert</h3>
         </div>
 
-        <div class="box box3">
-            <h1>Box 3</h1>
+        <div class="box content">
+            <h3>Content</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sequi odio veritatis iusto ipsam corporis est, officiis quo atque animi. Quae ad est voluptas itaque suscipit corrupti nobis. Distinctio, ut. Ipsum explicabo aperiam ut modi eos. Provident nesciunt ipsam modi, cumque ipsa optio labore corrupti inventore nemo, totam eos dolore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum beatae impedit sit itaque tempora sint sapiente quasi a nobis. Sapiente minus reprehenderit necessitatibus dignissimos! Exercitationem eaque ipsa recusandae soluta quo iusto, repellat saepe fugit veritatis?</p>
         </div>
 
-        <div class="box box4">
-            <h1>Box 4</h1>
+        <div class="box footer">
+            <h3>Footer</h3>
         </div>
 
-        <div class="box">
-            <h1>Box 5</h1>
-        </div>
-
-        <div class="box">
-            <h1>Box 6</h1>
-        </div>
-
+        <div class="box copyright"><p>© 2021 ShortyLogos Design</p></div>
     </main>
 </body>
 </html>
