Responsive code and layout for Neon Theme

--- a/grid/grid.html
+++ b/grid/grid.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
+
     <title>Grid</title>
 </head>
 <body>
     <header>
         <div id="site-title">
-        <h1>Grid System</h1>
-        <p class="site-title__p"><em>The place to experiment with grid layout!</em></p>
+        <h1>Neon Theme</h1>
+        <p class="site-title__p"><em>Clean design and vibrant colors</em></p>
         </div>
 
         <div id="navbar-container">
            <a href="#">Home</a>
-           <a href="#">Layout Tricks</a>
+           <a href="#">Blog</a>
+           <a href="#">Gallery</a>
            <a href="#">Contact</a>
         </div>
     </header>
@@ -24,26 +28,32 @@
 
     <main>
 
-        <div class="box header">
-            <h2>Header</h2>
+        <div class="box headline">
+            <h2>Headline</h2>
                 <p>Some article about loving to code.</p>
         </div>
+
+        <img src="https://images.pexels.com/photos/3186010/pexels-photo-3186010.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="thumbnail-img">
+
+        <div class="box content">
+            <h3>Article</h3>
+            <p>This a brief resume of an article. Lorem ipsum dolor sit amet adipisicing elit. </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+
+        <img src="https://images.pexels.com/photos/2690323/pexels-photo-2690323.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="thumbnail-img">
 
         <div class="box advert">
             <h3>Advert</h3>
         </div>
 
-        <div class="box content">
-            <h3>Content</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sequi odio veritatis iusto ipsam corporis est, officiis quo atque animi. Quae ad est voluptas itaque suscipit corrupti nobis. Distinctio, ut. Ipsum explicabo aperiam ut modi eos. Provident nesciunt ipsam modi, cumque ipsa optio labore corrupti inventore nemo, totam eos dolore.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum beatae impedit sit itaque tempora sint sapiente quasi a nobis. Sapiente minus reprehenderit necessitatibus dignissimos! Exercitationem eaque ipsa recusandae soluta quo iusto, repellat saepe fugit veritatis?</p>
-        </div>
-
         <div class="box footer">
             <h3>Footer</h3>
         </div>
-
-        <div class="box copyright"><p>© 2021 ShortyLogos Design</p></div>
     </main>
+
+    <footer>
+        <div class="copyright"><p>© 2021 ShortyLogos Design</p></div>
+    </footer>
 </body>
 </html>
