Change Head Title, margins on mobile and opacity of main section

--- a/grid/grid.html
+++ b/grid/grid.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="site-title">
-        <h1>Neon Theme</h1>
+        <h1>Neon Glass</h1>
         <p class="site-title__p"><em>Clean design and vibrant colors</em></p>
         </div>
 
