--- a/grid/grid.html
+++ b/grid/grid.html
@@ -22,7 +22,7 @@
            <a href="#">Home</a>
            <a href="#">Blog</a>
            <a href="#">Gallery</a>
-           <a href="#">Contact</a>
+           <a href="#">About</a>
         </div>
     </header>
 
