--- a/blending-mode/index.html
+++ b/blending-mode/index.html
@@ -8,14 +8,19 @@
     <title>CSS Blending Mode</title>
 </head>
 <body>
+
 <div class="background-image">
 <div class="wrapper">
     <div class="container">
         <h1>Prends ta carrière en main.</h1>
         <p>Cet exercice explore non seulement les possibilités offertes par les images de fond, mais également l'éventail de filtres disponible qu'on peut leur appliquer.</p>
     </div>
-    <div class="btn">Inscris-toi</div>
+
+    <div class="btn">Inscription</div>
+    </div>
 </div>
-</div>
+
+<footer>© 2021 ShortyLogos Design</footer>
+
 </body>
 </html>
