Clean code for blending-mode project

--- a/blending-mode/index.html
+++ b/blending-mode/index.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
     <div class="container">
         <h1>Prends ta carrière en main.</h1>
-        <p>Cet exercice explore non seulement les possibilités offertes par les images de fond, mais également l'éventail de filtres disponible qu'on peut leur appliquer.</p>
+        <p>Cet exercice explore non seulement les possibilités offertes par les images de fond, mais également l'éventail de filtres disponibles qu'il est possible de leurs appliquer.</p>
     </div>
 
     <div class="btn">Inscription</div>
