--- a/js-pratice/index.html
+++ b/js-pratice/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>JS Pratice</title>
 </head>
 <body>
@@ -14,6 +17,7 @@
     </header>
 
     <main>
+        <p>Eaque, eum corporis. Adipisci, accusantium ullam corporis voluptate consectetur accusamus dolores repudiandae est tempore esse, velit voluptatem aut culpa iste, quam ipsum illo fuga asperiores nesciunt alias? Molestias quidem totam doloribus vero, exercitationem nemo voluptates ipsum aperiam iure illum porro voluptas consequuntur repellendus dolorem dolorum praesentium libero, et repellat. Ratione, natus temporibus, architecto quo numquam aut adipisci suscipit commodi neque reiciendis quasi modi et asperiores voluptatum tempora?</p>
     </main>
 </body>
 </html>
