Add navbar to JS Pratice

--- a/js-pratice/index.html
+++ b/js-pratice/index.html
@@ -8,16 +8,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+<script async>
+    // JavaScript goes here!
+</script>
+
     <title>JS Pratice</title>
 </head>
 <body>
     <header>
         <h1>JavaScript Pratice
         </h1>
+        <nav>
+            <ul class="nav__container">
+                <li >Profile</li>
+                <li >Home</li>
+                <li class="nav__search"><input type="text" class="nav__search-input" placeholder="Search"></li>
+                <li>Logout</li>
+            </ul>
+        </nav>
     </header>
 
     <main>
+    <section>
         <p>Eaque, eum corporis. Adipisci, accusantium ullam corporis voluptate consectetur accusamus dolores repudiandae est tempore esse, velit voluptatem aut culpa iste, quam ipsum illo fuga asperiores nesciunt alias? Molestias quidem totam doloribus vero, exercitationem nemo voluptates ipsum aperiam iure illum porro voluptas consequuntur repellendus dolorem dolorum praesentium libero, et repellat. Ratione, natus temporibus, architecto quo numquam aut adipisci suscipit commodi neque reiciendis quasi modi et asperiores voluptatum tempora?</p>
+    </section>        
     </main>
 </body>
 </html>
