--- a/js-pratice/index.html
+++ b/js-pratice/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-<script async>
+<script src="variables.js" async>
     // JavaScript goes here!
 </script>
 
@@ -32,6 +32,7 @@
     <main>
     <section>
         <p>Eaque, eum corporis. Adipisci, accusantium ullam corporis voluptate consectetur accusamus dolores repudiandae est tempore esse, velit voluptatem aut culpa iste, quam ipsum illo fuga asperiores nesciunt alias? Molestias quidem totam doloribus vero, exercitationem nemo voluptates ipsum aperiam iure illum porro voluptas consequuntur repellendus dolorem dolorum praesentium libero, et repellat. Ratione, natus temporibus, architecto quo numquam aut adipisci suscipit commodi neque reiciendis quasi modi et asperiores voluptatum tempora?</p>
+        <button>Press Me</button>
     </section>        
     </main>
 </body>
