--- a/regex/index.html
+++ b/regex/index.html
@@ -15,7 +15,7 @@
             <input type="text" name="email" placeholder="email">
             <p>Email must be a valid address, e.g. me@mydomain.com</p>
 
-            <input type="text" name="password" placeholder="password">
+            <input type="password" name="password" placeholder="password">
             <!-- Change the input type to password for hiding what is typed. -->
             <p>Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters</p>
 
