Functions study in js-pratice

--- a/js-pratice/index.html
+++ b/js-pratice/index.html
@@ -31,9 +31,14 @@
 
     <main>
     <section>
-        <p>Eaque, eum corporis. Adipisci, accusantium ullam corporis voluptate consectetur accusamus dolores repudiandae est tempore esse, velit voluptatem aut culpa iste, quam ipsum illo fuga asperiores nesciunt alias? Molestias quidem totam doloribus vero, exercitationem nemo voluptates ipsum aperiam iure illum porro voluptas consequuntur repellendus dolorem dolorum praesentium libero, et repellat. Ratione, natus temporibus, architecto quo numquam aut adipisci suscipit commodi neque reiciendis quasi modi et asperiores voluptatum tempora?</p>
+        <p>Eaque, eum corporis. Adipisci, accusantium ullam corporis voluptate consectetur accusamus dolores repudiandae est tempore esse, velit voluptatem aut culpa iste, quam ipsum illo fuga lat. Ratione, natus temporibus, architecto quo numquam aut adipisci suscipit commodi neque reiciendis quasi modi et asperiores voluptatum tempora?</p>
         <button>Press Me</button>
-    </section>        
+    </section>       
+    <section>
+        <h2>Functions!
+            <ul class="people"></ul>
+        </h2>
+    </section> 
     </main>
 </body>
 </html>
