Landing page cleaner code

--- a/blending-mode/index.html
+++ b/blending-mode/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
 
-<div class="background-image">
-<div class="wrapper">
-    <div class="container">
-        <h1>Prends ta carrière en main.</h1>
-        <p>Cet exercice explore non seulement les possibilités offertes par les images de fond, mais également l'éventail de filtres disponibles qu'il est possible de leurs appliquer.</p>
+    <div class="background-image">
+    <div class="wrapper">
+        <div class="logo">GeekSchool.io</div>
+
+        <div class="container">
+            <h1>Prends ta carrière en main.</h1>
+            <p>Cet exercice explore non seulement les possibilités offertes par les images de fond, mais également l'éventail de filtres disponibles qu'il est possible de leurs appliquer.</p>
+        </div>
+
+        <div class="btn">Inscription</div>
     </div>
 
-    <div class="btn">Inscription</div>
-    </div>
-</div>
-
-<footer>© 2021 ShortyLogos Design</footer>
+    <footer>© 2021 ShortyLogos Design</footer>
 
 </body>
 </html>
