--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="material-icons f-icon">folder</span>
                 <a href="grid/grid.html">Grid</a>
                 <span class="material-icons f-icon">folder</span>
-                <a href="grid/grid.html">Clamp</a>
+                <a href="color-picker/color-picker.html">Color picker</a>
             </div>
         </div>
         
